<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:defaultNavHost="true"
    app:startDestination="@id/signInFragment">


    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.secureprogramming.feature.authentication.ui.signin.SignInFragment"
        android:label="fragment_signin"
...
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />

        <action
            app:popUpToInclusive="true"
            android:id="@+id/action_signInFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.secureprogramming.feature.authentication.ui.signup.SignUpFragment"
        android:label="SignUpFragment" >
...
