...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <EditText
                android:id="@+id/emailEditText"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_marginTop="12sp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="16dp"
                android:hint="Email"
...
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_layout" />

            <Button
                android:id="@+id/loginButton"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_marginTop="28dp"
                android:enabled="false"
                android:text="Login"
                app:layout_constraintEnd_toEndOf="parent"
...
