...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_edit_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    style="@style/EditTextStyle"
                    android:paddingHorizontal="10dp"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_person"
                    android:background="@android:color/transparent"
...
